Align favorites handling
+ use common handling for favorites
+ removed not used interfaces
+ fixed startup filter for remaining tournaments